--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
             <ul>
                 <li>Menu</li>
                 <img src="information.jpg" alt="">
-                <button>Log Ind</button>
+                <form>
+                    <button>Log Ind</button>
+                </form>
             </ul>
         </nav>
 
@@ -91,13 +93,15 @@
             </article>
 
             <article>
-                
-                    <div>
-                        <h1>Vores abonnenter kalder os kritisk, seriøs og troværdig. Se om du er enig...</h1>
+
+                <div>
+                    <h1>Vores abonnenter kalder os kritisk, seriøs og troværdig. Se om du er enig...</h1>
+                    <form>
                         <button>KLIK HER</button>
-                        <p>Allerede abonnent?<a href="">Log ind her</a></p>
-                        
-                    </div>
+                    </form>
+                    <p>Allerede abonnent?<a href="">Log ind her</a></p>
+
+                </div>
 
             </article>
 
@@ -107,14 +111,15 @@
             <article>
                 <div>
                     <h1>Fik du læst?</h1>
-                    <p>pil<span>pil</span></p>
+                    <p>pil <span>pil</span></p>
 
                 </div>
             </article>
 
             <article>
                 <img src="Grey-Box.jpeg" alt="">
-                <p>Alternativ forbrødring, eller hvordan jeg lærte at holde op med at bekymre mig og elske jazzhænder</p>
+                <p>Alternativ forbrødring, eller hvordan jeg lærte at holde op med at bekymre mig og elske jazzhænder
+                </p>
             </article>
 
             <article>
@@ -172,7 +177,157 @@
                 </div>
             </article>
         </section>
+
+        <section>
+            <h1>Forsiden lige nu</h1>
+            <article>
+                <div>
+                    <p>Abonnement</p>
+                </div>
+                <img src="Grey-Box.jpeg" alt="">
+                <h1>Gas er et godt politisk våben. Det er bare ikke Putin, der bruger det</h1>
+
+            </article>
+
+            <article>
+                <img src="Grey-Box.jpeg" alt="">
+                <h1>Mand dig op, kvinde!</h1>
+            </article>
+
+            <article>
+                <h1>Peter Madsen anker kun længden af sin straf</h1>
+                <p>Ankesagen mod Peter Madsen kommer kun til at handle om, hvilken straf han skal have</p>
+            </article>
+
+            <article>
+                <div>
+                    <p>Abonnement</p>
+                </div>
+                <img src="Grey-Box.jpeg" alt="">
+                <h1>Rapport af norsk regeringskommission skaber tvivl om lovligheden af FE's masseovervågning</h1>
+            </article>
+
+            <article>
+                <div>
+                    <p>Abonnement</p>
+                </div>
+                <h1>Sådan håndteres offentlige arbejdskonflikter i Sverige og Norge</h1>
+                <p>Den ellers højtbesungne danske model skal revideres, hvis det står til Socialdemokratiets formand,
+                    Mette Frederiksen. Information skitsere i anledning overenskomstmodellerne hos vores nordiske
+                    søsternationer. Men måske behøver vi slet ikke se ud over landets grænser for at finde inspiration
+                    til justeringer</p>
+            </article>
+
+            <article>
+                <div>
+                    <p>Abonnement</p>
+                </div>
+                <img src="Grey-Box.jpeg" alt="">
+                <h1>440.000 syrere er vendt tilbage, selv om krigen fortsætter. Vi har fulgt en af dem</h1>
+            </article>
+        </section>
+
+        <section>
+            <div>
+                <p>Anbefalinger</p>
+                <p>Kommentarer</p>
+            </div>
+            <article>
+                <div>
+                    <p>Anbefal artikel</p>
+                    <img src="" alt="">
+                    <h1>Henrik holm hansen</h1>
+                    <p>07. maj, 2018 - 05:56</p>
+                </div>
+
+                <div>
+                    <p>Hvis det forholder sig som skrevet står at Rusland for mest ud nord stream 2 forstår jeg slet
+                        ikke politikerne og måske specielt EU ikke bruger muligheden aktivt til at presse endsige
+                        fortællte PUTIN at ruslands opførsel i Ukraine ikke kan accepteres kommer der ikke penge i
+                        kassen kan oligarkerne ikke fodres!</p>
+                    <p>Anbefal kommentar</p>
+                </div>
+
+                <div>
+                    <img src="" alt="">
+                    <h1>Gert Romme</h1>
+                    <p>07. maj, 2018 - 17:08</p>
+                </div>
+
+                <div>
+                    <p>
+                        Jeg skal ikke vurdere, hvem der eventuelt kan finde på at benytte dette våben, der er lammende
+                        for civilsamfundet.
+                        Men Rusland har faktisk brugt dette "våben" mere end en gang. Og de vestlige lande med
+                        Forbundsrepublikken i spidsen er blevet ramt mindst 2 gange.
+                        Og hver gang har Rusland beklaget, og undskyldt sig med, at man ikke kunne ramme Poland (1 gang)
+                        og Ukraina (mindst 1 gang), uden at det påvirkede andre aftagelande. Og mindst en gang mente
+                        Rusland, at de vestlige aftagerlande burde straffe??? - Ukraina.
+                        I øvrigt så jeg i eftermiddags tidligere SPD-medlem, tidligere Forbundskanzler og tidligere
+                        Gerhard Schröder sidde på de fine pladser under Vladimir Putins indsættelses-show. Det var på RT
+                        (Russia Today), der er Vladimir Putins personlige propaganda-kanal der også sikrer "det frie
+                        ord" i verden. Det så ud til, det var meget vigtigt for Putin og RT, for der var hele tiden
+                        fokus på en tidligere Hr. Schröder.</p>
+                    <p>Anbefal kommentar</p>
+                    <p>Du skal være registreret bruger for at kommentere. <strong>Log ind</strong> eller <strong>opret
+                            bruger»</strong></p>
+                </div>
+            </article>
+        </section>
     </main>
+
+    <footer>
+        <article>
+            <h1>Information om E-avis</h1>
+            <p>Du kan læse Information, lige som du vil. På din mobil, tablet eller computer - og helt ude i skoven</p>
+        </article>
+
+        <article>
+            <p>Læs e-avisen på din computer</p>
+            <p>Download til Apple</p>
+            <p>Download til Android</p>
+            <h1>Følg avisen</h1>
+            <p>Nyhedsbreve</p>
+            <p>Facebook</p>
+            <p>Twitter</p>
+            <p>RSS</p>
+        </article>
+
+        <article>
+            <img src="Grey-Box.jpeg" alt="">
+            <h1>Information hver morgen</h1>
+            <form>
+                <input type="text" placeholder="Skriv din email her" id="">
+                <button>Tilmeld</button>
+            </form>
+            <h1>Køb avisen</h1>
+            <p>Få et godt tilbud</p>
+            <p>Abonnement - selvbetjening</p>
+            <p>Abonnementsbetingelser</p>
+            <p>Information i løssalg</p>
+            <p>Hjælp til information.dk</p>
+        </article>
+
+        <article>
+            <h1>Om Information</h1>
+            <p>Redaktion</p>
+            <p>iBureauet</p>
+            <p>Besøg Butikken</p>
+            <p>Informations Venner</p>
+            <p>Ledige stillinger</p>
+            <p>Økonomi og ledelse</p>
+            <p>Hosted hos Sentia</p>
+        </article>
+
+        <article>
+            <p>Ansvarshavende chefredaktør: Rune Lykkeberg | Dagbladet Information, Store Kongensgade 40C København.
+                Telefon 3369 6000 | CVR: 63058416</p>
+            <p>Privatspolitik | Cookies | Annocering</p>
+            <form>
+                <button>Skriv til os</button>
+            </form>
+        </article>
+    </footer>
 </body>
 
 </html>
