--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <div>Abonnement <span>Læsetid: 7 MIN.</span></div>
 
                 <div>
-                    <h1>Gas er et godt politisk våben. Det er bare ikke Putin, der bruger det</h1>
+                    <p>Gas er et godt politisk våben. Det er bare ikke Putin, der bruger det</p>
                     <p>Nogle EU-lande frygter, at Rusland kan bruge Nord Stream 2 som politisk våben mod Europa. Men i
                         virkeligheden er det omvendt, mener firmaerne bag rørledningen: Det er EU, der bruger gassen som
                         våben
@@ -95,7 +95,7 @@
             <article>
 
                 <div>
-                    <h1>Vores abonnenter kalder os kritisk, seriøs og troværdig. Se om du er enig...</h1>
+                    <p>Vores abonnenter kalder os kritisk, seriøs og troværdig. Se om du er enig...</p>
                     <form>
                         <button>KLIK HER</button>
                     </form>
@@ -110,7 +110,7 @@
         <section>
             <article>
                 <div>
-                    <h1>Fik du læst?</h1>
+                    <p>Fik du læst?</p>
                     <p>pil <span>pil</span></p>
 
                 </div>
@@ -147,55 +147,55 @@
             <article>
                 <div>
                     <p>16:36</p>
-                    <h1>Slut med møntbetaling i københavnske p-automater</h1>
+                    <p>Slut med møntbetaling i københavnske p-automater</p>
                 </div>
 
                 <div>
                     <p>16:26</p>
-                    <h1>Energiminister: Afgift på biomasse er forkert vej at gå</h1>
+                    <p>Energiminister: Afgift på biomasse er forkert vej at gå</p>
                 </div>
 
                 <div>
                     <p>15:45</p>
-                    <h1>Libanesisk premierministers parti går en tredjedel tilbage</h1>
+                    <p>Libanesisk premierministers parti går en tredjedel tilbage</p>
                 </div>
 
                 <div>
                     <p>15:10</p>
-                    <h1>Ombudsmand: Offentligheden må se kronprinsens IOC-breve</h1>
+                    <p>Ombudsmand: Offentligheden må se kronprinsens IOC-breve</p>
                 </div>
 
                 <div>
                     <p>15:02</p>
-                    <h1>WWF: Vildsvinehegn skader andre dyrearter i grænselandet</h1>
+                    <p>WWF: Vildsvinehegn skader andre dyrearter i grænselandet</p>
                 </div>
 
                 <div>
                     <p>14:46</p>
-                    <h1>Atomaftale med Iran fortsætter også uden USA</h1>
+                    <p>Atomaftale med Iran fortsætter også uden USA</p>
                     <p>Flere nyheder</p>
                 </div>
             </article>
         </section>
 
         <section>
-            <h1>Forsiden lige nu</h1>
+            <p>Forsiden lige nu</p>
             <article>
                 <div>
                     <p>Abonnement</p>
                 </div>
                 <img src="Grey-Box.jpeg" alt="">
-                <h1>Gas er et godt politisk våben. Det er bare ikke Putin, der bruger det</h1>
+                <p>Gas er et godt politisk våben. Det er bare ikke Putin, der bruger det</p>
 
             </article>
 
             <article>
                 <img src="Grey-Box.jpeg" alt="">
-                <h1>Mand dig op, kvinde!</h1>
+                <p>Mand dig op, kvinde!</p>
             </article>
 
             <article>
-                <h1>Peter Madsen anker kun længden af sin straf</h1>
+                <p>Peter Madsen anker kun længden af sin straf</p>
                 <p>Ankesagen mod Peter Madsen kommer kun til at handle om, hvilken straf han skal have</p>
             </article>
 
@@ -204,14 +204,14 @@
                     <p>Abonnement</p>
                 </div>
                 <img src="Grey-Box.jpeg" alt="">
-                <h1>Rapport af norsk regeringskommission skaber tvivl om lovligheden af FE's masseovervågning</h1>
+                <p>Rapport af norsk regeringskommission skaber tvivl om lovligheden af FE's masseovervågning</p>
             </article>
 
             <article>
                 <div>
                     <p>Abonnement</p>
                 </div>
-                <h1>Sådan håndteres offentlige arbejdskonflikter i Sverige og Norge</h1>
+                <p>Sådan håndteres offentlige arbejdskonflikter i Sverige og Norge</p>
                 <p>Den ellers højtbesungne danske model skal revideres, hvis det står til Socialdemokratiets formand,
                     Mette Frederiksen. Information skitsere i anledning overenskomstmodellerne hos vores nordiske
                     søsternationer. Men måske behøver vi slet ikke se ud over landets grænser for at finde inspiration
@@ -223,7 +223,7 @@
                     <p>Abonnement</p>
                 </div>
                 <img src="Grey-Box.jpeg" alt="">
-                <h1>440.000 syrere er vendt tilbage, selv om krigen fortsætter. Vi har fulgt en af dem</h1>
+                <p>440.000 syrere er vendt tilbage, selv om krigen fortsætter. Vi har fulgt en af dem</p>
             </article>
         </section>
 
@@ -236,7 +236,7 @@
                 <div>
                     <p>Anbefal artikel</p>
                     <img src="" alt="">
-                    <h1>Henrik holm hansen</h1>
+                    <p>Henrik holm hansen</p>
                     <p>07. maj, 2018 - 05:56</p>
                 </div>
 
@@ -250,7 +250,7 @@
 
                 <div>
                     <img src="" alt="">
-                    <h1>Gert Romme</h1>
+                    <p>Gert Romme</p>
                     <p>07. maj, 2018 - 17:08</p>
                 </div>
 
@@ -278,7 +278,7 @@
 
     <footer>
         <article>
-            <h1>Information om E-avis</h1>
+            <p>Information om E-avis</p>
             <p>Du kan læse Information, lige som du vil. På din mobil, tablet eller computer - og helt ude i skoven</p>
         </article>
 
@@ -286,7 +286,7 @@
             <p>Læs e-avisen på din computer</p>
             <p>Download til Apple</p>
             <p>Download til Android</p>
-            <h1>Følg avisen</h1>
+            <p>Følg avisen</p>
             <p>Nyhedsbreve</p>
             <p>Facebook</p>
             <p>Twitter</p>
@@ -295,12 +295,12 @@
 
         <article>
             <img src="Grey-Box.jpeg" alt="">
-            <h1>Information hver morgen</h1>
+            <p>Information hver morgen</p>
             <form>
                 <input type="text" placeholder="Skriv din email her" id="">
                 <button>Tilmeld</button>
             </form>
-            <h1>Køb avisen</h1>
+            <p>Køb avisen</p>
             <p>Få et godt tilbud</p>
             <p>Abonnement - selvbetjening</p>
             <p>Abonnementsbetingelser</p>
@@ -309,7 +309,7 @@
         </article>
 
         <article>
-            <h1>Om Information</h1>
+            <p>Om Information</p>
             <p>Redaktion</p>
             <p>iBureauet</p>
             <p>Besøg Butikken</p>
