--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <div>Abonnement <span>Læsetid: 7 MIN.</span></div>
 
                 <div>
-                    <p>Gas er et godt politisk våben. Det er bare ikke Putin, der bruger det</p>
+                    <h1>Gas er et godt politisk våben. Det er bare ikke Putin, der bruger det</h1>
                     <p>Nogle EU-lande frygter, at Rusland kan bruge Nord Stream 2 som politisk våben mod Europa. Men i
                         virkeligheden er det omvendt, mener firmaerne bag rørledningen: Det er EU, der bruger gassen som
                         våben
